--- a/package.json
+++ b/package.json
@@ -8,17 +8,29 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "electron:serve": "vite build & electron .",
-    "electron:build": "vite build & electron-builder build --config electron-builder.json"
+    "electron:serve": "vite build --mode electron & electron .",
+    "electron:build": "vite build --mode electron & electron-builder build --config electron-builder.json"
   },
   "dependencies": {
-    "vue": "^3.2.45"
+    "pinia": "^2.0.32",
+    "vue": "^3.2.45",
+    "vue-router": "4",
+    "vuetify": "^3.1.6"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue-jsx": "^3.0.0",
     "electron": "^23.1.1",
     "electron-builder": "^23.6.0",
-    "typescript": "^4.9.3",
+    "eslint": "^8.0.1",
+    "eslint-config-standard-with-typescript": "^34.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-vue": "^9.9.0",
+    "sass": "1.32.12",
+    "typescript": "*",
     "vite": "^4.1.0",
     "vue-tsc": "^1.0.24"
   }
