--- a/package.json
+++ b/package.json
@@ -1,37 +1,49 @@
 {
   "name": "cos-client",
-  "private": true,
   "version": "0.0.1",
-  "type": "commonjs",
-  "main": "main.js",
+  "private": true,
   "scripts": {
-    "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview",
+    "lint": "vue-cli-service lint",
+    "dev": "vite",
+    "electron:build": "vite build --mode electron & electron-builder build --config electron-builder.json",
     "electron:serve": "vite build --mode electron & electron .",
-    "electron:build": "vite build --mode electron & electron-builder build --config electron-builder.json"
+    "preview": "vite preview"
   },
+  "main": "./src/main.ts",
   "dependencies": {
     "pinia": "^2.0.32",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "vue": "^3.2.45",
     "vue-router": "4",
     "vuetify": "^3.1.6"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.19.1",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/eslint-config-standard": "^8.0.1",
+    "@vue/eslint-config-typescript": "^11.0.2",
+    "babel-eslint": "^10.1.0",
     "electron": "^23.1.1",
     "electron-builder": "^23.6.0",
-    "eslint": "^8.0.1",
+    "eslint": "^8.35.0",
     "eslint-config-standard-with-typescript": "^34.0.0",
-    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^9.9.0",
+    "material-design-icons-iconfont": "^6.7.0",
     "sass": "1.32.12",
     "typescript": "*",
     "vite": "^4.1.0",
     "vue-tsc": "^1.0.24"
-  }
+  },
+  "type": "commonjs"
 }
