--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
   },
   "main": "main.js",
   "dependencies": {
+    "@vuelidate/core": "^2.0.0",
+    "@vuelidate/validators": "^2.0.0",
+    "axios": "^1.3.4",
     "pinia": "^2.0.32",
     "pinia-plugin-persistedstate": "^3.1.0",
     "toastify-js": "^1.12.0",
+    "uuid": "^9.0.0",
     "vue": "^3.2.45",
+    "vue-i18n": "^9.2.2",
     "vue-router": "4",
     "vuetify": "^3.1.6"
   },
@@ -23,6 +28,7 @@
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.19.1",
     "@types/toastify-js": "^1.11.1",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
     "@vitejs/plugin-vue": "^4.0.0",
