--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.3.4",
     "pinia": "^2.0.32",
     "pinia-plugin-persistedstate": "^3.1.0",
+    "pubsub-js": "^1.9.4",
     "toastify-js": "^1.12.0",
     "uuid": "^9.0.0",
     "vue": "^3.2.45",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.19.1",
+    "@types/pubsub-js": "^1.8.3",
     "@types/toastify-js": "^1.11.1",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
